--- a/style.css
+++ b/style.css
@@ -3,10 +3,14 @@
     --cinza-secundario:#c0c0c0;
     --botao-azul:#167BF7;
     --cor-de-fundo:#00030C;
+    --fonte-principal: 'inter';
 }
 body{
     background-color: var(--cor-de-fundo);
     color: var(--branco-pricipal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 *{
     margin: 0;
@@ -22,4 +26,23 @@ body{
     display: grid;
     grid-template-columns: 50% 50%;
 }
-
+.container_botao{
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-pricipal);
+    display: block;
+    text-decoration: none;
+}
+.botao_secundario{
+    background-color: transparent;
+    border: 2px solid var(--branco-pricipal);
+}
+.container_aviso{
+    font-size: 12px;
+    color: var(--cinza-secundario);
+}
+.conteiner_titulo{
+    font-size: 28px;
+    font-weight: 700;
+}
